--- a/styles/members.css
+++ b/styles/members.css
@@ -1,17 +1,13 @@
-/*
-TemplatName : feeilt
-author: nsstheme
-*/
-
-/* Styles for embla-carousel  */
+ /* Styles for embla-carousel  */
 .embla_member {
   overflow: hidden;
 }
 .embla__container_member {
   display: flex;
+  justify-content: center;
 }
 .embla__slide_member {
-  flex: 0 0 100%;
+  flex: 0 0 auto;
+  width: 358px;
   min-width: 0;
-  flex-basis: 358px;
 }
